--- a/sports/assets/sass/_main-banner.scss
+++ b/sports/assets/sass/_main-banner.scss
@@ -11,13 +11,8 @@
 	min-height: 100vh;
 	flex-direction: column;
 	justify-content: center;
-//	padding: 90px 0;
-    padding-top: 90px;
+    padding: 150px 0 200px 0;
     transition: all 1s ease-out;
-}
-
-.padding {
-    padding-bottom: 80px;
 }
 
 .intro__title {
