--- a/DETAILING/assets/css/main.css
+++ b/DETAILING/assets/css/main.css
@@ -424,7 +424,7 @@ header__adderss {
     width: 100%;
     height: 2px;
     background: #fff;
-    transition: "all .2s ease";
+    transition: all .2s ease;
   }
 
   .header__burger:after {
@@ -441,7 +441,7 @@ header__adderss {
     width: 100%;
     height: 2px;
     background: #fff;
-    transition: "all .2s ease";
+    transition: all .2s ease;
   }
 
   .header__burger.active:before {
@@ -467,7 +467,7 @@ header__adderss {
     background: #6170e2;
     padding-top: 70px;
     overflow: auto;
-    transition: "all .2s ease";
+    transition: all .2s ease;
   }
 
   .header__menu.active {
