--- a/Agency/assets/sass/_fonts.scss
+++ b/Agency/assets/sass/_fonts.scss
@@ -1,39 +1,39 @@
 @font-face {
 	font-family: 'Lato';
-	src: url('../fonts/Lato-Regular.eot');
-	src: local('☺'), url('../fonts/Lato-Regular.woff') format('woff'), url('../fonts/Lato-Regular.ttf') format('truetype'), url('../fonts/Lato-Regular.svg') format('svg');
+	src: local('☺'), url('../fonts/Lato-Regular.woff') format('woff');
+    font-display: swap;
 	font-weight: normal;
 	font-style: normal;
 }
 
 @font-face {
 	font-family: 'Lato';
-	src: url('../fonts/Lato-Bold.eot');
-	src: local('☺'), url('../fonts/Lato-Bold.woff') format('woff'), url('../fonts/Lato-Bold.ttf') format('truetype'), url('../fonts/Lato-Bold.svg') format('svg');
+	src: local('☺'), url('../fonts/Lato-Bold.woff') format('woff');
+    font-display: swap;
 	font-weight: bold;
 	font-style: normal;
 }
 
 @font-face {
 	font-family: 'LemonMilkbold';
-	src: url('../fonts/LemonMilkbold.eot');
-	src: local('☺'), url('../fonts/LemonMilkbold.woff') format('woff'), url('../fonts/LemonMilkbold.ttf') format('truetype'), url('../fonts/LemonMilkbold.svg') format('svg');
+	src: local('☺'), url('../fonts/LemonMilkbold.woff') format('woff');
+    font-display: swap;
 	font-weight: normal;
 	font-style: normal;
 }
 
 @font-face {
 	font-family: 'PeaceSans';
-	src: url('../fonts/PeaceSans.eot');
-	src: local('☺'), url('../fonts/PeaceSans.woff') format('woff'), url('../fonts/PeaceSans.ttf') format('truetype'), url('../fonts/PeaceSans.svg') format('svg');
+	src: local('☺'), url('../fonts/PeaceSans.woff') format('woff');
+    font-display: swap;
 	font-weight: normal;
 	font-style: normal;
 }
 
 @font-face {
 	font-family: 'Pump';
-	src: url('../fonts/Pump.eot');
-	src: local('☺'), url('../fonts/Pump.woff') format('woff'), url('../fonts/Pump.ttf') format('truetype'), url('../fonts/Pump.svg') format('svg');
+	src: local('☺'), url('../fonts/Pump.woff') format('woff');
+    font-display: swap;
 	font-weight: normal;
 	font-style: normal;
 }
