--- a/DETAILING/assets/css/main.css
+++ b/DETAILING/assets/css/main.css
@@ -59,7 +59,7 @@ img {
 
 .section__title {
   font-size: 39px;
-  font-family: "marmelad", "sans-serif";
+  font-family: 'marmelad', 'sans-serif';
   font-weight: 400;
   text-align: center;
   margin: auto;
@@ -80,7 +80,7 @@ img {
 
 .btn > button {
   font-size: 21px;
-  font-family: "andika", "sans-serif";
+  font-family: 'andika', 'sans-serif';
   font-weight: 400;
   background: transparent;
   border: 0;
@@ -88,7 +88,7 @@ img {
   padding: 20px;
   border-radius: 3px;
   cursor: pointer;
-  transition: 0.5s;
+  transition: .5s;
   transform: rotateX(0);
 }
 
@@ -112,12 +112,12 @@ img {
 
 /* /BASE */
 .header {
-  font-family: "Marmelad", sans-serif;
+  font-family: 'Marmelad', sans-serif;
   background: url("../img/header/header-bg.jpg");
   background-size: cover;
   min-height: 100vh;
   color: #fff;
-  transition: 0.5s;
+  transition: .5s;
 }
 
 .header--blue {
@@ -137,7 +137,9 @@ img {
   flex-wrap: wrap;
 }
 
-.header__site-name > span, .header__city, .header__street {
+.header__site-name > span,
+.header__city,
+.header__street {
   font-size: 18px;
 }
 
@@ -161,6 +163,7 @@ header__adderss {
 
 .header__contact {
   display: flex;
+  margin: auto;
 }
 
 .header__contact-text {
@@ -184,7 +187,8 @@ header__adderss {
   overflow: hidden;
 }
 
-.header__btn > button::before, .header__btn > button::after {
+.header__btn > button::before,
+.header__btn > button::after {
   content: "";
   position: absolute;
   top: 0;
@@ -201,7 +205,7 @@ header__adderss {
 }
 
 .header__btn > button::after {
-  animation: btn-header 2s ease-in-out 0.2s infinite;
+  animation: btn-header 2s ease-in-out .2s infinite;
 }
 
 @keyframes btn-header {
@@ -212,6 +216,7 @@ header__adderss {
     left: 187px;
   }
 }
+
 .header__btn > button {
   width: 187px;
   height: 42px;
@@ -221,7 +226,7 @@ header__adderss {
   border: 0;
   outline: 0;
   cursor: pointer;
-  transition: 0.5s;
+  transition: .5s;
   transform: rotateY(0);
 }
 
@@ -245,7 +250,7 @@ header__adderss {
   padding: 11px 20px;
   font-size: 17px;
   display: block;
-  transition: 0.5s;
+  transition: .5s;
 }
 
 .header__item > a:hover {
@@ -257,11 +262,11 @@ header__adderss {
   align-self: flex-end;
   margin-top: 116px;
   position: relative;
-  transition: 0.5s;
+  transition: .5s;
 }
 
 .header__title {
-  font-family: "Andika", sans-serif;
+  font-family: 'Andika', sans-serif;
   font-size: 60px;
   border-bottom: 1px solid #fff;
 }
@@ -337,9 +342,10 @@ header__adderss {
   cursor: pointer;
 }
 
-.callback__close::after, .callback__close::before {
+.callback__close::after,
+.callback__close::before {
   position: absolute;
-  content: "";
+  content: '';
   width: 22px;
   height: 2px;
   background: #fff;
@@ -354,7 +360,7 @@ header__adderss {
 }
 
 .callback span {
-  font-family: "Andika", sans-serif;
+  font-family: 'Andika', sans-serif;
   font-size: 23px;
   color: #fff;
   margin: 25px 0;
@@ -363,7 +369,7 @@ header__adderss {
 }
 
 .callback input {
-  font-family: "Andika", sans-serif;
+  font-family: 'Andika', sans-serif;
   font-size: 16px;
   color: #4F4F4F;
   padding: 12px 6px 6px 6px;
@@ -373,7 +379,7 @@ header__adderss {
   border: 0;
 }
 
-.callback input[type=submit] {
+.callback input[type="submit"] {
   height: 52px;
   background: rgba(0, 10, 38, 0.88);
   background-image: url("../img/header/btn.png");
@@ -393,9 +399,104 @@ header__adderss {
 }
 
 .callback input::placeholder {
-  font-family: "Andika", sans-serif;
+  font-family: 'Andika', sans-serif;
   font-size: 16px;
   color: #3B3B3B;
+}
+
+@media (max-width: 860px) {
+  body.lock {
+    overflow: hidden;
+  }
+  .header__burger {
+    position: relative;
+    z-index: 11111;
+    width: 30px;
+    height: 20px;
+  }
+  .header__burger:after,
+  .header__burger:before {
+    content: '';
+    display: block;
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background: #fff;
+    opacity: 0;
+    transition: all 0.2s ease;
+  }
+  .header__burger:after {
+    bottom: 0;
+  }
+  .header__burger:before {
+    top: 0;
+  }
+  .header__burger span {
+    font-size: 20px;
+    opacity: 1;
+    transition: all 0.2s ease;
+  }
+  .header__burger.active {
+    top: 18px;
+    right: 46px;
+    position: fixed;
+  }
+  .header__burger.active:before {
+    transform: rotate(45deg);
+    top: 9px;
+    opacity: 1;
+  }
+  .header__burger.active:after {
+    transform: rotate(-45deg);
+    bottom: 9px;
+    opacity: 1;
+  }
+  .header__burger.active span {
+    opacity: 0;
+  }
+  .header__menu {
+    position: fixed;
+    top: 0;
+    left: 100%;
+    width: 100%;
+    height: 100%;
+    background: rgba(7, 8, 18, 0.97);
+    padding-top: 40px;
+    padding-right: 50px;
+    overflow: auto;
+    z-index: 1111;
+    transition: all 0.2s ease;
+  }
+  .header__menu.active {
+    left: 50px;
+  }
+  .header__list {
+    flex-direction: column;
+    align-items: flex-end;
+    margin-right: 30px;
+  }
+}
+
+@media (max-width: 400px) {
+  .header__title {
+    font-size: 50px;
+  }
+  .header__contact {
+    flex-direction: column;
+  }
+}
+
+@media (max-width: 630px) {
+  .header__top {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+  .header__site-name,
+  .header__adderss {
+    margin-bottom: 15px;
+  }
 }
 
 @media (max-height: 360px) {
@@ -403,92 +504,7 @@ header__adderss {
     height: 300px;
   }
 }
-@media (max-width: 860px) {
-  body.lock {
-    overflow: hidden;
-  }
 
-  .header__burger {
-    position: relative;
-    z-index: 111;
-    width: 30px;
-    height: 20px;
-  }
-
-  .header__burger:after,
-.header__burger:before {
-    content: "";
-    display: block;
-    position: absolute;
-    left: 0;
-    width: 100%;
-    height: 2px;
-    background: #fff;
-    transition: all .2s ease;
-  }
-
-  .header__burger:after {
-    bottom: 0;
-  }
-
-  .header__burger:before {
-    top: 0;
-  }
-
-  .header__burger span {
-    position: absolute;
-    top: 9px;
-    width: 100%;
-    height: 2px;
-    background: #fff;
-    transition: all .2s ease;
-  }
-
-  .header__burger.active:before {
-    transform: rotate(45deg);
-    top: 9px;
-  }
-
-  .header__burger.active:after {
-    transform: rotate(-45deg);
-    bottom: 9px;
-  }
-
-  .header__burger.active span {
-    display: none;
-  }
-
-  .header__menu {
-    position: fixed;
-    top: 0;
-    left: 100%;
-    width: 100%;
-    height: 100%;
-    background: #6170e2;
-    padding-top: 70px;
-    overflow: auto;
-    transition: all .2s ease;
-  }
-
-  .header__menu.active {
-    left: 0;
-  }
-
-  .header__list {
-    flex-direction: column;
-    align-items: flex-end;
-    margin-right: 30px;
-  }
-}
-@media (max-width: 400px) {
-  .header__title {
-    font-size: 50px;
-  }
-
-  .header__contact {
-    flex-direction: column;
-  }
-}
 .services {
   background: #fff;
 }
@@ -537,7 +553,7 @@ header__adderss {
   padding: 17px 0 17px 9px;
   background: linear-gradient(to right, #3B474E 74%, rgba(10, 50, 88, 0));
   font-size: 16px;
-  font-family: "marmelad", "sans-serif";
+  font-family: 'marmelad', 'sans-serif';
   color: #fff;
 }
 
@@ -550,20 +566,21 @@ header__adderss {
     width: 49.5%;
     margin-top: 6px;
   }
-
   .services__item:last-child {
     width: 100%;
   }
 }
+
 @media (max-width: 400px) {
   .services__item {
     width: 100%;
   }
 }
+
 .works {
   background-image: url("../img/works/bg.jpg");
   background-size: cover;
-  font-family: "marmelad", "sans-serif";
+  font-family: 'marmelad', 'sans-serif';
 }
 
 .works__inner {
@@ -597,6 +614,7 @@ header__adderss {
 }
 
 .works__item > img {
+  max-width: 100%;
   min-width: 100%;
 }
 
@@ -607,7 +625,7 @@ header__adderss {
 .slider__arrows-prev, .slider__arrows-next {
   position: absolute;
   top: 50%;
-  transform: translate(-50%);
+  transform: translate(-50%, -50%);
   width: 55px;
   height: 55px;
   border: 2px solid #B6E0FF;
@@ -621,11 +639,39 @@ header__adderss {
 }
 
 .slider__arrows-prev {
-  left: -5%;
+  left: -7%;
 }
 
 .slider__arrows-next {
-  left: 105%;
+  left: 107%;
+}
+
+@media (max-width: 850px) {
+  .slider__arrows-prev {
+    left: -10%;
+  }
+  .slider__arrows-next {
+    left: 110%;
+  }
+  .slider__arrows-prev, .slider__arrows-next {
+    width: 45px;
+    height: 45px;
+    font-size: 20px;
+  }
+}
+
+@media (max-width: 550px) {
+  .slider__arrows-prev, .slider__arrows-next {
+    width: 35px;
+    height: 35px;
+    font-size: 16px;
+  }
+  .slider__arrows-prev {
+    left: -15%;
+  }
+  .slider__arrows-next {
+    left: 115%;
+  }
 }
 
 .about {
@@ -635,7 +681,7 @@ header__adderss {
 }
 
 .about::before {
-  content: "";
+  content: '';
   position: fixed;
   top: 0;
   left: 0;
@@ -666,7 +712,7 @@ header__adderss {
   font-size: 25px;
   margin-right: auto;
   color: #FFFFFF;
-  font-family: "andika", "sans-serif";
+  font-family: 'andika', 'sans-serif';
   border-bottom: 1px solid #fff;
 }
 
@@ -678,7 +724,7 @@ header__adderss {
 .about__info > p {
   color: #FFFFFF;
   font-size: 18px;
-  font-family: "andika", "sans-serif";
+  font-family: 'andika', 'sans-serif';
   margin-top: 20px;
 }
 
@@ -717,6 +763,7 @@ header__adderss {
     width: 100%;
   }
 }
+
 .testimonials {
   background-image: url("../img/testimonials/bg.jpg");
   background-size: cover;
@@ -770,14 +817,14 @@ header__adderss {
 .testimonials__card-title {
   font-size: 25px;
   color: #082332;
-  font-family: "marmelad", "sans-serif";
+  font-family: 'marmelad', 'sans-serif';
   margin-bottom: 10px;
 }
 
 .testimonials__text {
   color: #000000;
   font-size: 18px;
-  font-family: "andika", "sans-serif";
+  font-family: 'andika', 'sans-serif';
 }
 
 @media (max-width: 800px) {
@@ -785,22 +832,22 @@ header__adderss {
     width: 100%;
   }
 }
+
 @media (max-width: 410px) {
   .testimonials__item {
     flex-direction: column;
   }
-
   .testimonials__img-wrap {
     margin-bottom: 10px;
   }
-
   .testimonials__text, .testimonials__card-title {
     text-align: center;
   }
 }
+
 .footer {
   background: linear-gradient(to right, #EBEBEB, #E6E6E6 100%);
-  font-family: "marmelad", "sans-serif";
+  font-family: 'marmelad', 'sans-serif';
 }
 
 .footer__inner {
@@ -884,7 +931,7 @@ header__adderss {
 
 .footer__btn > span {
   display: block;
-  transition: 0.5s;
+  transition: .5s;
 }
 
 .footer__btn:hover span {
@@ -907,15 +954,13 @@ header__adderss {
     text-align: center;
     padding: 25px 0;
   }
-
   .footer__block:not(:last-child) {
     border-bottom: 1px solid #fff;
   }
 }
+
 @media (max-width: 360px) {
   .footer__title {
     font-size: 50px;
   }
 }
-
-/*# sourceMappingURL=main.css.map */
